tests/fixtures/invalid/pow_none_bool_list.py
# Cannot call pow() with None, Bool, List[int]
x = pow(None, True, [1, 2, 3])
